updated test file to not include conditional comments.

--- a/emails/edward/test-v2.html
+++ b/emails/edward/test-v2.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="viewport" content="width=device-width"/>
-	<link rel="stylesheet" href="/css/global.css">
-	<link rel="stylesheet" href="/css/dsg-global.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="/css/global-v2.css">
 </head>
 <body>
 
@@ -18,22 +17,7 @@
 				<table class="container">
 					<tr>
 						<td>
-
-							<table class="row">
-								<tr>
-									<td class="wrapper last p-0">
-										<table class="twelve columns">
-											<tr>
-												<td>
-													<img src="http://stage.software.dell.com/ecard/test/auditing/images/image1.jpg"/>
-												</td>
-												<td class="expander"></td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-							</table>
-
+							<img src="http://stage.software.dell.com/ecard/test/auditing/images/image1.jpg">
 						</td>
 					</tr>
 				</table>
@@ -45,25 +29,24 @@
 							<table class="row">
 								<tbody>
 								<tr>
-									<td class="wrapper p-0">
-										<table class="ten columns m-0">
+									<td class="wrapper">
+										<table class="ten columns">
 											<tbody>
 											<tr>
 												<td class="text-pad-left text-pad-right">
-													<h1 style="color: $$HexColor">$$Headline</h1>
-
-													<h5 class="mt-10">$$SubHeadline</h5>
+													<h1 class="text-blue">Things are about to get better than you imagined.</h1>
+													<h5 class="mt-10">Discover the affordable Brio alternative.</h5>
 												</td>
 												<td class="expander"></td>
 											</tr>
 											</tbody>
 										</table>
 									</td>
-									<td class="wrapper last">
+									<td class="wrapper last hide-for-small">
 										<table class="two columns">
 											<tbody>
 											<tr>
-												<td class="center hide-for-small" align="center">
+												<td class="center" align="center">
 													<center>
 														<a href="$$cta_Input_URL">
 															<img src="http://software.dell.com/images/email/icon-endpt.png" class="center heading-icon" width="80">
@@ -79,10 +62,10 @@
 								</tbody>
 							</table>
 
-							<table class="button button-$$HeaderIcon_bk m-0">
+							<table class="button button-blue m-0">
 								<tr>
 									<td>
-										<a href="$$cta_Input_URL" class="text-underline">$$cta_Input_Text</a>
+										<a href="$$cta_Input_URL" class="text-underline">Watch Webcast</a>
 									</td>
 								</tr>
 							</table>
@@ -90,6 +73,455 @@
 						</td>
 					</tr>
 				</table>
+
+				<!-- DSG Main with Image, Secondary CTA -->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper">
+										<!-- Image -->
+										<table class="five columns">
+											<tr>
+												<td class="center" align="center">
+													<center>
+														<a href="$$LeftBarImage_Input_URL">
+															<img src="http://software.dell.com/Images/EmailImages/IllustrationIcons_220x280pixel_Ebook.png" alt="$$LeftBarImage_Input_Text" class="center">
+														</a>
+													</center>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<!-- Content -->
+										<table class="seven columns">
+											<tr>
+												<td class="text-pad">
+													<p>You’ve sized up the competition, set your bracket and watched all the buzzer-beating championship play that you could. So how’d you do? Now that you know what features to look for in your next virtualization management tool, you are ready for product analysis, in-house evaluation and deployment.</p>
+
+													<p>Read part four and learn how to:</p>
+
+													<ul>
+														<li>Identify the top performers</li>
+														<li>Review the analysis and stats</li>
+														<li>Perform evaluations</li>
+														<li>Cut the nets and make a purchase</li>
+													</ul>
+
+													<table class="medium button button-blue button-width-auto mb-5 mt-5">
+														<tr>
+															<td>
+																<a href="$$LeftBarImage_Input_URL">
+																	<span>
+																	   Watch On Demand
+																	</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+							<table class="row">
+								<tr class="bg-dark-gray">
+									<td class="wrapper">
+										<table class="eight columns">
+											<tr>
+												<td class="text-pad-left  text-white">
+													Missed part three of this e-book?
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="four columns">
+											<tr>
+												<td align="right" class="text-right text-pad">
+													<a href="$$SecondaryCTAButton_Input_URL" class="text-white text-underline">
+														<span>Get Your Copy</span>
+													</a>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!-- DSG Main with Sidebar, Secondary CTA -->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper bg-light-gray">
+										<table class="five columns">
+											<tr>
+												<td class="text-pad">
+													<p class="text-size-14">Live webcast</p>
+
+													<p class="text-size-15">
+														<strong>Migration Upgrades and Platform Modernization</strong>
+													</p>
+
+													<p class="text-size-14">Date</p>
+
+													<p class="text-size-15">
+														<strong>January 21, 2015</strong>
+													</p>
+
+													<p class="text-size-14">Time</p>
+
+													<p class="text-size-14">
+														<strong>11 a.m. PT/ 2 p.m. ET</strong>
+													</p>
+
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="seven columns">
+											<tr>
+												<td class="text-pad">
+													<p><strong>Learn how to easily upgrade to Oracle 12c - </strong>
+														as well as migrate from Oracle to other databases such as SQL
+														Server and SAP ASE - with
+														extremely minimal downtime. Discover the data replication
+														technique that
+														makes it simple to get data from Oracle to almost any database
+														supported by ODBC, and see
+														how you can use data replication to reduce
+														costs, boost system performance and even improve business.
+													</p>
+
+													<table class="medium button button-blue button-width-auto mb-5">
+														<tr>
+															<td>
+																<a href="$$CTAButton_Input_URL">
+																	<span>Watch On Demand</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+							<table class="row">
+								<tr class="bg-dark-gray">
+									<td class="wrapper">
+										<table class="eight columns">
+											<tr>
+												<td class="text-pad-left  text-white">
+													Missed part three of this e-book?
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="four columns">
+											<tr>
+												<td align="right" class="text-right text-pad">
+													<a href="$$SecondaryCTAButton_Input_URL" class="text-white text-underline">
+														<span>Get Your Copy</span>
+													</a>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!-- DSG no leftside bar -->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper last">
+										<table class="twelve columns">
+											<tr>
+												<td class="text-pad">
+													<p><strong>Learn how to easily upgrade to Oracle 12c - </strong>
+														as well as migrate from Oracle to other databases such as SQL
+														Server and SAP ASE - with
+														extremely minimal downtime. Discover the data replication
+														technique that
+														makes it simple to get data from Oracle to almost any database
+														supported by ODBC, and see
+														how you can use data replication to reduce
+														costs, boost system performance and even improve business.
+													</p>
+
+													<table class="medium button button-blue button-width-auto mb-5 mt-10">
+														<tr>
+															<td>
+																<a href="$$CTAButton_Input_URL">
+																	<span>Watch On Demand</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!-- DSG Main with Sidebar - with the sidebar on the right -->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper">
+										<table class="seven columns">
+											<tr>
+												<td class="text-pad">
+													<p><strong>Learn how to easily upgrade to Oracle 12c - </strong>
+														as well as migrate from Oracle to other databases such as SQL
+														Server and SAP ASE - with
+														extremely minimal downtime. Discover the data replication
+														technique that
+														makes it simple to get data from Oracle to almost any database
+														supported by ODBC, and see
+														how you can use data replication to reduce
+														costs, boost system performance and even improve business.
+													</p>
+
+													<table class="medium button button-blue button-width-auto mb-5">
+														<tr>
+															<td>
+																<a href="$$CTAButton_Input_URL">
+																	<span>Watch On Demand</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last bg-light-gray">
+										<table class="five columns">
+											<tr>
+												<td class="text-pad">
+													<p class="text-size-14">Live webcast</p>
+
+													<p class="text-size-15">
+														<strong>Migration Upgrades and Platform Modernization</strong>
+													</p>
+
+													<p class="text-size-14">Date</p>
+
+													<p class="text-size-15">
+														<strong>January 21, 2015</strong>
+													</p>
+
+													<p class="text-size-14">Time</p>
+
+													<p class="text-size-14">
+														<strong>11 a.m. PT/ 2 p.m. ET</strong>
+													</p>
+
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+							<table class="row">
+								<tr class="bg-dark-gray">
+									<td class="wrapper">
+										<table class="eight columns">
+											<tr>
+												<td class="text-pad-left  text-white">
+													Missed part three of this e-book?
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="four columns">
+											<tr>
+												<td align="right" class="text-right text-pad">
+													<a href="$$SecondaryCTAButton_Input_URL" class="text-white text-underline">
+														<span>Get Your Copy</span>
+													</a>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!-- DSG Support -->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row text-size-13 hide-for-small">
+								<tr>
+									<td class="wrapper">
+
+										<table class="eight columns">
+											<tr>
+												<td class="text-pad">
+													<p>We are excited to announce that Change Auditor 6.6 is now ready for download.</p>
+
+													<p>
+														<strong>
+															What's new in v6.6:
+														</strong>
+													</p>
+
+													<ul>
+														<li>
+															<strong>A new auditing module to audit cloud-based storage activity</strong>
+															- IT departments today are at the whim of the latest cloud storage application or vendors.
+															Users can easily take corporate data and store it on the cloud. To facilitate the
+															management of this, the Dell Change Auditor for Cloud Storage auditing module
+															automatically
+															monitors the following cloud storage providers if installed: Dropbox&trade;, Dropbox&trade;
+															for Business,
+															Box&reg;, and OneDrive&reg;.
+														</li>
+														<li>
+															<strong>Auto deployment Update </strong>
+															- A streamlined deployment process that allows the ability to auto deploy workstation
+															agents.
+														</li>
+														<li>
+															<strong>Supported upgrade path for Change Auditor 6.6</strong>
+															- Upgrading Change Auditor to version 6.6, requires the database version to be at least
+															6.0. To use
+															an existing 5.x database, it must be first updated to the new schema by installing Change
+															Auditor 6.0 or
+															6.5; alternatively, a new 6.6 database can be created and the required events can be moved
+															from 5.x database.
+														</li>
+													</ul>
+
+													<table class="row">
+														<tbody>
+														<tr>
+															<td class="wrapper mt-20">
+																<table class="medium button button-blue button-width-auto six columns mt-10">
+																	<tr>
+																		<td>
+																			<a href="$$cta1_Input_URL"><span>$$cta1_Input_Text</span></a>
+																		</td>
+																	</tr>
+																</table>
+															</td>
+															<td><img src="http://software.dell.com/images/email/blank.gif" width="20" height="20">
+															</td>
+															<td class="wrapper last mt-20">
+																<table class="medium button button-blue button-width-auto six columns mt-10">
+																	<tr>
+																		<td>
+																			<a href="$$cta2_Input_URL"><span>$$cta2_Input_Text</span></a>
+																		</td>
+																	</tr>
+																</table>
+															</td>
+														</tr>
+														</tbody>
+													</table>
+
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+
+									</td>
+									<td class="wrapper last bg-light-gray">
+
+										<table class="four columns">
+											<tr>
+												<td class="text-pad">
+													<p>Useful links</p>
+
+													<p>Visit the Dell Software Support Portal:</p>
+
+													<p><a href="#" class="text-underline">software.dell.com/support</a></p>
+
+													<p>Start or manage a service request:</p>
+
+													<p><a href="#" class="text-underline">Service Request page</a></p>
+
+													<p>
+														Tackle Compliance &amp; IT Governace Issues, including
+														community forums forums for Reporter, InTrust, ChangeAuditor, and
+														Knowledge Portal:
+													</p>
+
+													<p><a href="#" class="text-underline">Compliance &amp; IT Governance Community</a></p>
+
+													<p>
+														Please do not respond directly to this e-mail notification. Instead, you can
+														manage your product notification settings with your User Profile on the
+														<a href="#" class="text-underline">Dell Support Portal</a> or send us an email at the
+														address below.
+													</p>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				[[widget:footer]]
 
 			</center>
 		</td>
