--- a/widgets/footer.html
+++ b/widgets/footer.html
@@ -1,108 +1,63 @@
-<table class="body">
+<table class="container">
 	<tr>
-		<td class="center" align="center" valign="top">
-			<center>
+		<td>
 
-				<table class="container">
-					<tr>
-						<td>
+			<table class="row bg-light-gray">
+				<tr>
+					<td class="wrapper hide-for-small">
+						<table class="five columns">
+							<tr>
+								<td class="text-pad pt-5">
+									<a href="http://software.dell.com">
+										<img
+											src="http://software.dell.com/images/email/dsg-logo-200x82.png" width="200" height="82" align="left">
+									</a>
+								</td>
+								<td class="expander"></td>
+							</tr>
+						</table>
+					</td>
+					<td class="wrapper last">
+						<table class="seven columns">
+							<tr>
+								<td class="text-sm text-pad">
+									Dell Software<br>
+									5 Polaris Way, Aliso Viejo, CA 92656
+								</td>
+								<td class="expander"></td>
+							</tr>
+							<tr>
+								<td class="seven sub-columns text-pad">
+									Contact Us:<br>
+									1-800-306-9329<br>
+									<a href="mailto:info@software.dell.com">info@software.dell.com</a>
+								</td>
+								<td class="five sub-columns text-pad">
+									Follow Us:<br>
 
-							<table class="row bg-light-gray">
-								<tr>
-									<td class="wrapper">
-										<table class="five columns">
-											<tr>
-												<td class="text-pad hide-for-small pt-5">
-													<a href="http://software.dell.com">
-														<img
-															src="http://software.dell.com/images/email/dsg-logo-200x82.png"
-															width="200" height="82" align="left"/>
-													</a>
-												</td>
-												<td class="expander"></td>
-											</tr>
-										</table>
-									</td>
-									<td class="wrapper last">
-										<table class="seven columns">
-											<tr>
-												<td class="text-sm text-pad">
-																			<span class="followus-txt">
-																					Dell Software
-																			</span>
-													<br>
-																			<span class="followus-normal-txt">
-																					5 Polaris Way, Aliso Viejo, CA 92656
-																			</span>
-													<br><br>
+									<a href="https://www.facebook.com/DellSystemsManagement">
+										<img src="http://software.dell.com/images/email/icon-facebook-blue.png" height="20" width="22" class="inline-block">
+									</a>
 
-													<table class="mso-table-fix" width="180" cellpadding="0" cellspacing="0" align="left">
-														<tr>
+									<a href="https://plus.google.com/+DellSoftware/posts">
+										<img src="http://software.dell.com/images/email/icon-googleplus-blue.png" height="20" width="22" class="inline-block">
+									</a>
 
-															<td width="150" align="left" class="p-0">
-																												 <span class="followus-txt">
-																															Contact Us:
-																													</span>
-																<br>
-																													<span class="followus-normal-txt">
-																															1-800-306-9329
-																													</span>
-																<br>
-																<a href="mailto:info@software.dell.com">info@software.dell.com</a>
-															</td>
-														</tr>
-													</table>
+									<a href="https://www.linkedin.com/grp/home?gid=4793472">
+										<img src="http://software.dell.com/images/email/icon-linkedin-blue.png" height="20" width="22" class="inline-block">
+									</a>
 
-													<table class="mso-table-fix" width="120" cellpadding="0" cellspacing="0" align="left">
-														<tr>
+									<a href="https://twitter.com/Dell_WM">
+										<img src="http://software.dell.com/images/email/icon-twitter-blue.png" height="20" width="22" class="inline-block">
+									</a>
+								</td>
+								<td class="expander"></td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
 
-															<td width="100" align="left" class="p-0">
-																<span class="followus-txt">Follow Us:</span>
-																<br>
-																<a href="https://www.facebook.com/DellSystemsManagement"
-																	 class="social-link">
-
-																	<img src="http://software.dell.com/images/email/icon-facebook-blue.png"
-																			 height="20" width="22" class="social-img"/>
-
-																</a>
-																<a href="https://plus.google.com/+DellSoftware/posts"
-																	 class="social-link">
-
-																	<img src="http://software.dell.com/images/email/icon-googleplus-blue.png"
-																			 height="20" width="22" class="social-img"/>
-
-																</a>
-																<a href="https://www.linkedin.com/grp/home?gid=4793472"
-																	 class="social-link">
-
-																	<img src="http://software.dell.com/images/email/icon-linkedin-blue.png"
-																			 height="20" width="22" class="social-img"/>
-
-																</a>
-																<a href="https://twitter.com/Dell_WM" class="social-link">
-
-																	<img src="http://software.dell.com/images/email/icon-twitter-blue.png"
-																			 height="20" width="22" class="social-img"/>
-																</a>
-															</td>
-
-														</tr>
-													</table>
-
-												</td>
-												<td class="expander"></td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-							</table>
-
-						</td>
-					</tr>
-				</table>
-
-			</center>
 		</td>
 	</tr>
 </table>
