--- a/widgets/top-v2.html
+++ b/widgets/top-v2.html
@@ -12,12 +12,12 @@
 
 									<table class="max-width">
 										<tr>
-											<td>
+											<td class="p-0">
 												<a href="http://software.dell.com">
-													<img src="http://software.dell.com/images/shared/logo-blue.png"/>
+													<img src="http://software.dell.com/images/shared/logo-blue.png" width="121" height="48">
 												</a>
 											</td>
-											<td class="no-word-break no-wrap text-right valign-middle">
+											<td class="no-word-break no-wrap text-right valign-middle p-0">
 												View this email <a href="http://example.com/">online</a>
 											</td>
 										</tr>
