updated test file to not include conditional comments.

--- a/emails/edward/test-v2.html
+++ b/emails/edward/test-v2.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<div class="hidden">Pre header text description test.</div>
+
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -66,6 +68,124 @@
 								<tr>
 									<td>
 										<a href="$$cta_Input_URL" class="text-underline">Watch Webcast</a>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!--DSG Main with Sidebar - legal bird seed copy-->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper bg-light-gray">
+										<table class="five columns">
+											<tr>
+												<td class="text-pad">
+													$$LeftSideBar
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="seven columns">
+											<tr>
+												<td class="text-pad">
+													$$Description
+
+													<table class="medium button button-blue button-width-auto mb-5 mt-5">
+														<tr>
+															<td>
+																<a href="$$CTAButton_Input_URL">
+																	<span>$$CTAButton_Input_Text</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+
+													<div class="mt-10">
+														$$BirdSeedLegal
+													</div>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!-- DSG no leftside bar, secondary CTA -->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper last">
+										<table class="twelve columns">
+											<tr>
+												<td class="text-pad">
+													<p><strong>Learn how to easily upgrade to Oracle 12c - </strong>
+														as well as migrate from Oracle to other databases such as SQL
+														Server and SAP ASE - with
+														extremely minimal downtime. Discover the data replication
+														technique that
+														makes it simple to get data from Oracle to almost any database
+														supported by ODBC, and see
+														how you can use data replication to reduce
+														costs, boost system performance and even improve business.
+													</p>
+
+													<table class="medium button button-blue button-width-auto mb-5 mt-10">
+														<tr>
+															<td>
+																<a href="$$CTAButton_Input_URL">
+																	<span>Watch On Demand</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+							<table class="row">
+								<tr class="bg-dark-gray">
+									<td class="wrapper">
+										<table class="eight columns">
+											<tr>
+												<td class="text-pad-left  text-white">
+													Missed part three of this e-book?
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="four columns">
+											<tr>
+												<td align="right" class="text-right text-pad">
+													<a href="$$SecondaryCTAButton_Input_URL" class="text-white text-underline">
+														<span>Get Your Copy</span>
+													</a>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
 									</td>
 								</tr>
 							</table>
@@ -162,6 +282,67 @@
 					</tr>
 				</table>
 
+				<!--DSG Main with left Image (280px)-->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper">
+										<!-- Image -->
+										<table class="six columns">
+											<tr>
+												<td class="center" align="center">
+													<center>
+														<a href="$$LeftBarImage_Input_URL">
+															<img src="http://software.dell.com/Images/EmailImages/IllustrationIcons_220x280pixel_Ebook.png" alt="$$LeftBarImage_Input_Text" class="center">
+														</a>
+													</center>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<!-- Content -->
+										<table class="six columns">
+											<tr>
+												<td class="text-pad">
+													<p>You’ve sized up the competition, set your bracket and watched all the buzzer-beating championship play that you could. So how’d you do? Now that you know what features to look for in your next virtualization management tool, you are ready for product analysis, in-house evaluation and deployment.</p>
+
+													<p>Read part four and learn how to:</p>
+
+													<ul>
+														<li>Identify the top performers</li>
+														<li>Review the analysis and stats</li>
+														<li>Perform evaluations</li>
+														<li>Cut the nets and make a purchase</li>
+													</ul>
+
+													<table class="medium button button-blue button-width-auto mb-5 mt-5">
+														<tr>
+															<td>
+																<a href="$$LeftBarImage_Input_URL">
+																	<span>
+																	   Watch On Demand
+																	</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
 				<!-- DSG Main with Sidebar, Secondary CTA -->
 				<table class="container">
 					<tr>
@@ -246,6 +427,77 @@
 												<td align="right" class="text-right text-pad">
 													<a href="$$SecondaryCTAButton_Input_URL" class="text-white text-underline">
 														<span>Get Your Copy</span>
+													</a>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+						</td>
+					</tr>
+				</table>
+
+				<!--DSG Main with Sidebar - with the sidebar on the right AND secondary CTA-->
+				<table class="container">
+					<tr>
+						<td>
+
+							<table class="row">
+								<tr>
+									<td class="wrapper">
+										<table class="seven columns">
+											<tr>
+												<td class="text-pad">
+													$$Description
+
+													<table class="medium button button-blue button-width-auto mb-5">
+														<tr>
+															<td>
+																<a href="$$CTAButton_Input_URL">
+																	<span>$$CTAButton_Input_Text</span>
+																</a>
+															</td>
+														</tr>
+													</table>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last bg-light-gray">
+										<table class="five columns">
+											<tr>
+												<td class="text-pad">
+													$$RightSideBar
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
+
+							<table class="row">
+								<tr class="bg-dark-gray">
+									<td class="wrapper">
+										<table class="eight columns">
+											<tr>
+												<td class="text-pad-left  text-white">
+													$$SecondaryCTADescription
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="four columns">
+											<tr>
+												<td align="right" class="text-right text-pad">
+													<a href="$$SecondaryCTAButton_Input_URL" class="text-white text-underline">
+														<span>$$SecondaryCTAButton_Input_Text</span>
 													</a>
 												</td>
 												<td class="expander"></td>
