--- a/emails/edward/test-v2.html
+++ b/emails/edward/test-v2.html
@@ -773,7 +773,8 @@
 					</tr>
 				</table>
 
-				[[widget:footer]]
+				[[widget:footer-v3]]
+				[[widget:unsubscribe]]
 
 			</center>
 		</td>
