--- a/widgets/unsubscribe.html
+++ b/widgets/unsubscribe.html
@@ -1,45 +1,32 @@
-<table class="body">
+<table class="container">
 	<tr>
-		<td class="center" align="center" valign="top">
-			<center>
+		<td class="no-hyphens">
 
-				<table class="container">
-					<tr>
-						<td class="no-hyphens">
+			<table class="row bg-light-gray">
+				<tr>
+					<td class="wrapper last pt-0">
+						<table class="twelve columns">
+							<tr>
+								<td class="footer-bottom text-pad">
+									<div class="text-size-12">
+										<a href="http://software.dell.com">software.dell.com</a> |
+										<a href="http://software.dell.com/legal/privacy.aspx">Privacy Statement</a> |
+										<a href="http://software.dell.com/unsubscribe">Unsubscribe from Dell&nbsp;Software</a> |
+										<a
+											href="http://s2149.t.eloqua.com/e/f2?elqFormName=frmGEMSUnsub&amp;elqSiteID=2149&amp;e=%3Cspan%20class=eloquaemail%3EEmailAddress%3C/span%3E&amp;url=https://ecomm.dell.com/GSC/ListRemoval/Index?returnPath=www.dell.com/content/topics/global.aspx/policy/en/country_specific&amp;s=gen&amp;%7Esection=023&amp;c=us&amp;l=en&amp;elq=%3Cspan%20class=eloquaemail%3Erecipientid%3C/span%3E">Unsubscribe
+											from Dell</a>
+									</div>
+									<div class="mt-5 text-size-12">
+										This email is an advertisement or solicitation from&nbsp;Dell&nbsp;Software. ©2016 Dell Inc.&nbsp;All rights reserved.
+									</div>
+								</td>
+								<td class="expander"></td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
 
-							<table class="row bg-light-gray">
-								<tr>
-									<td class="wrapper last">
-										<table class="twelve columns">
-											<tr>
-												<td class="center footer-bottom" align="center">
-													<center>
-														<div class="text-pad text-size-12">
-															<a href="http://software.dell.com">Software.Dell.com</a> |
-															<a href="http://software.dell.com/legal/privacy.aspx">Privacy Statement</a> |
-															<a
-																href="https://ecomm.dell.com/GSC/ListRemoval/Index?returnPath=www.dell.com/content/topics/global.aspx/policy/en/country_specific&s=gen&~section=023&c=us&l=en">Unsubscribe
-																from Dell</a> |
-															<a href="http://software.dell.com/unsubscribe">Unsubscribe from Dell&nbsp;Software</a>
-														</div>
-														<div class="mt-5 text-size-12">
-															This email is an advertisement or solicitation from Dell&nbsp;Software. &copy;2015 Dell Inc. All
-															rights reserved.
-														</div>
-													</center>
-												</td>
-												<td class="expander"></td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-							</table>
-
-						</td>
-					</tr>
-				</table>
-
-			</center>
 		</td>
 	</tr>
 </table>
