update core email stylesheet.
Change-Id: Ic531dbbc7d6a1191c9f1f99070c23f68986ff857

--- a/emails/edward/test-v3.html
+++ b/emails/edward/test-v3.html
@@ -19,7 +19,7 @@
 					<tr>
 						<td>
 
-							<table class="row text-size-13 hide-for-small">
+							<table class="row text-size-13">
 								<tr>
 									<td class="wrapper">
 
@@ -170,6 +170,9 @@
 						</td>
 					</tr>
 				</table>
+
+				[[widget:footer-v4]]
+				[[widget:unsubscribe]]
 
 			</center>
 		</td>
