--- a/widgets/footer-v3.html
+++ b/widgets/footer-v3.html
@@ -15,16 +15,17 @@
 												Follow Us:
 											</td>
 											<td class="text-pad-right">
-												<a href="https://www.facebook.com/dellsoftware"><img src="http://stage.software.dell.com/images/icon-facebook-v2.png"></a>
+												<a href="https://www.facebook.com/dellsoftware"><img src="http://software.dell.com/images/email/icon-facebook-v2.png"></a>
 											</td>
 											<td class="text-pad-right">
-												<a href="https://plus.google.com/+DellSoftware/posts"><img src="http://stage.software.dell.com/images/icon-googleplus-v2.png"></a>
+												<a href="https://plus.google.com/+DellSoftware/posts"><img src="http://software.dell.com/images/email/icon-googleplus-v2.png"></a>
 											</td>
 											<td class="text-pad-right">
-												<a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"><img src="http://stage.software.dell.com/images/icon-linkedin-v2.png"></a>
+												<a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"><img
+													src="http://software.dell.com/images/email/icon-linkedin-v2.png"></a>
 											</td>
 											<td>
-												<a href="https://twitter.com/DellSoftware"><img src="http://stage.software.dell.com/images/icon-twitter-v2.png"></a>
+												<a href="https://twitter.com/DellSoftware"><img src="http://software.dell.com/images/email/icon-twitter-v2.png"></a>
 											</td>
 										</tr>
 									</table>
